--- a/app/globals.css
+++ b/app/globals.css
@@ -38,10 +38,6 @@ body {
     scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.screenSize {
-  min-height: calc(100vh - 112px);
-}
-
 @keyframes fadeInOut {
   0% {
     opacity: 0;
@@ -62,7 +58,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 8px; /* width of the scrollbar */
+  width: 6px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -72,4 +68,43 @@ body {
 
 ::-webkit-scrollbar-track {
   background-color: #0f172a;
+}
+
+:hover.glass {
+  background-color: rgba(160, 176, 214, 0.06);
+  transition: background-color 0.1s ease-in-out;
+  border-radius: 6px;
+  border-top: 1px #35415b solid;
+  margin-top: -1px;
+}
+
+:hover.glass .changeColor {
+  color: #5adfcb;
+}
+
+:hover.glass .changePos {
+  transform: translate(4px, -4px);
+  transition: transform 0.1s ease-in-out;
+}
+
+.hovered {
+  opacity: 0.5;
+  transition: opacity 0.15s ease-in-out;
+}
+
+:hover.glass .changeBrightness {
+  opacity: 1;
+  transition: none;
+}
+
+.changeWidth {
+  transition: all 0.15s ease-in-out;
+}
+
+:hover.infoLine {
+  color: #e2e8f0;
+}
+
+:hover.infoLine .changeWidth {
+  width: 70px;
 }
